 06.12.2002
************************************************************************************************

Autologin cross-domain cookie bug fixed. New series and new programme time rounding 
algorythm introduced.

Series owner can now edit his programmes - series data from the calendar page. This privilige
has been available fro station managers only. Usabilty rules! :)


************************************************************************************************
 05.12.2002
************************************************************************************************

Series and programme management interface extended. Now programmes and series can be activated
and diactivated. If a series is deactivated, then all the programmes belonging to that series
are deactivated as well. Nice graphical represenatation of active state developed.

Autologin implemented. Now people can check the autologin box in their settings panel and
stop worrying about their passwords. The autologin will work until the user chooses to
logout explicitly! :)


************************************************************************************************
 04.12.2002
************************************************************************************************

User settings panel cretaed. Now every user can take care of his/her own data and even
personalize the site a bit ;)


************************************************************************************************
 02.12.2002 - 03.12.2002
************************************************************************************************

Advanced series management options development. Series data and programme data can now be
easily edited by the station admin or the station manager.


************************************************************************************************
 29.11.2002
************************************************************************************************
