@@ -18,6 +18,10 @@ new_user = New User
 settings = Settings
 my_set = My Settings
 logout = Logout
+info = Information
+note1 = Please note, that you have
+note2 = READ ONLY
+note3 = privileges over this section.
 
 # user pages
 usr_tit = Users Registered With This Station
