@@ -10,6 +10,9 @@ algorythm introduced.
 Series owner can now edit his programmes - series data from the calendar page. This privilige
 has been available fro station managers only. Usabilty rules! :)
 
+The Scarey No Access warnings have been scooped away ;) Now the sections that are read only
+warn the user before he does anything, that the section is read only.
+
 
 ************************************************************************************************
  05.12.2002
